{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 1,
  "lineage": "5957bb2b-7c41-2a2f-b191-fa55ee70d908",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:339712813986:instance/i-0c7f0f4e62bf53b38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7f0f4e62bf53b38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8230544ca013469",
            "private_dns": "ip-10-10-0-160.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.160",
            "public_ip": "18.234.150.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "env": "Dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0f7c0187d8b14caba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fc44fd535e1bf6",
            "tags": {
              "Name": "Monitoring"
            },
            "tags_all": {
              "Name": "Monitoring",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a310e8fb20c513b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:339712813986:instance/i-021bc0b7e28e129d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021bc0b7e28e129d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1c68de8616d44c0",
            "private_dns": "ip-10-10-0-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.188",
            "public_ip": "54.235.33.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "env": "Dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0e1815ca631913a71",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fc44fd535e1bf6",
            "tags": {
              "Name": "apache"
            },
            "tags_all": {
              "Name": "apache",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a310e8fb20c513b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": "jumpserver",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:339712813986:instance/i-066ac92e8b3b74dc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066ac92e8b3b74dc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000cd45d00ef0c648",
            "private_dns": "ip-10-10-0-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.189",
            "public_ip": "44.220.136.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "env": "Dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-061d66d14c949ec28",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fc44fd535e1bf6",
            "tags": {
              "Name": "jumpserver"
            },
            "tags_all": {
              "Name": "jumpserver",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a310e8fb20c513b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": "mysql",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:339712813986:instance/i-07e5ed1c31d642344",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e5ed1c31d642344",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7b8dbdb009154b2",
            "private_dns": "ip-10-10-0-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.213",
            "public_ip": "3.85.244.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "env": "Dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0a0015167dd610f56",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088fc44fd535e1bf6",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a310e8fb20c513b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:internet-gateway/igw-0081405948f52c7e1",
            "id": "igw-0081405948f52c7e1",
            "owner_id": "339712813986",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "Name": "igw vpc virginia",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-036d94f826655a118"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:route-table/rtb-064b43b87e8662436",
            "id": "rtb-064b43b87e8662436",
            "owner_id": "339712813986",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0081405948f52c7e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public CRT"
            },
            "tags_all": {
              "Name": "Public CRT",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-036d94f826655a118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b879498ce00c032",
            "route_table_id": "rtb-064b43b87e8662436",
            "subnet_id": "subnet-088fc44fd535e1bf6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:security-group/sg-01a310e8fb20c513b",
            "description": "Allow SSH inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a310e8fb20c513b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance Security Group",
            "name_prefix": "",
            "owner_id": "339712813986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance Security Group"
            },
            "tags_all": {
              "Name": "Public Instance Security Group",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-036d94f826655a118"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:subnet/subnet-0451cf2538394a1bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0451cf2538394a1bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712813986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-036d94f826655a118"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:subnet/subnet-088fc44fd535e1bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088fc44fd535e1bf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712813986",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "Name": "Public subnet",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-036d94f826655a118"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712813986:vpc/vpc-036d94f826655a118",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d4b8546c6d560a2e",
            "default_route_table_id": "rtb-0135f62aa8fed74b6",
            "default_security_group_id": "sg-0d416dc10773eba1d",
            "dhcp_options_id": "dopt-0e5ac5372108169c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036d94f826655a118",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0135f62aa8fed74b6",
            "owner_id": "339712813986",
            "tags": {
              "Name": "VPC Virgina--cerberus-pro"
            },
            "tags_all": {
              "Name": "VPC Virgina--cerberus-pro",
              "env": "Dev",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}